[project]
name = "pdcp"
version = "1.2.0"
description = "Pythonic DCP(Bifrost2) Wrapper"
authors = [
    {name = "Sebastian Vega",email = "sebasvega4604@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "dcp (>=3.2.1,<4.0.0)",
    "rich (>=14.0.0,<15.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
